# de2api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/hm_api/: __init__.py  accounts.py  cli.py  config.py  crypto.py  login.py  logs.py  response_adapter.py  response_store.py  server.py  settings.py
src/hm_api/static/admin/: index.html
src/hm_api/static/admin/assets/: index-BjJI0JkD.css  index-C9ix2IK9.js  index-DQhDAeYl.js
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx
