[project]
name = "hm-api"
version = "0.1.0"
description = "DevEco Code OpenAI-compatible API CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx[http2]>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.15.0",
    "pydantic>=2.9.0",
    "cryptography>=44.0.0",
    "rich>=13.9.0",
    "click>=8.1.0",
]

[project.scripts]
hm-api = "hm_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hm_api"]
artifacts = ["src/hm_api/static/admin/**"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]
